2021-05-05  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-brxxx-intro, find-eev-quick-intro)
	(find-pdf-like-intro): 

	* eev-audiovideo.el (find-eev2019video, find-eev2020video)
	(find-eevnavvideo, find-eevtemplvideo, find-eevfherelvideo)
	(find-eevtestblocksvideo): make them interactive.

2021-05-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eev-install-intro): new section: "5.1. Using
	the tarball". The old section "5.1. Using the git repository" is
	now 5.2, and the old section "5.2. Installation quirks" is now
	5.3.
	(find-eev-quick-intro): rewrote the section "1. Installing eev".

2021-04-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-videos-intro): rewrote the sections "2. Short
	links to eev video tutorials" and "3. Some `find-eevvideo-links'".
	(find-eev-quick-intro): added some "[Video links:]" blocks.

2021-04-22  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-audiovideo.el (find-eev2019video, find-eev2020video)
	(find-eevnavvideo, find-eevtemplvideo, find-eevfherelvideo)
	(find-eevtestblocksvideo): new functions.

2021-04-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-videos-intro): renamed some .mp4 files.

2021-04-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-testblocks.el (ee-insert-test-python-mode): use `exec'
	instead of `execfile', as `execfile' doesn't exist in Python 3.

2021-02-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-find-links-links): make it not interactive.

2021-02-26  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (ee-find-grep-links1): new function.
	(ee-find-grep-links): use `ee-find-grep-links1'.

2021-02-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (ee-find-pdftotext-text): added a comment
	explaining how to use UTF-8 instead of Latin-1.

2021-02-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-eww): new function.

	* eev-brxxx.el (ee-code-brurl-:remote, ee-code-brurl-:local)